# frama-c-ninja

./: Readme.md  pyproject.toml
fcn/: __init__.py
fcr/: __init__.py
scripts/: installEditableFcnCommand  installEditableFcrCommand
